# embedded

./: .editorconfig  .gitignore  README.md
apps/macro-eleven/: CLAUDE.md  README.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml
apps/macro-eleven/src-tauri/: Cargo.toml  tauri.conf.json
apps/macro-eleven/src-tauri/capabilities/: overlay.json
apps/macro-eleven/src-tauri/src/: lib.rs  main.rs
apps/macro-eleven/src-tauri/src/commands/: device.rs  layers.rs  mod.rs  overlay.rs
apps/macro-eleven/src-tauri/src/hid/: connection.rs  protocol.rs
apps/macro-eleven/src-tauri/src/keymap/: parser.rs
apps/macro-eleven/src/app/: App.css  App.tsx  providers.tsx
apps/macro-eleven/src/entities/: device.ts  key.ts  layer.ts
apps/macro-eleven/src/features/key-tester/: KeyCell.tsx  KeyTester.tsx  useKeyEvents.ts
apps/macro-eleven/src/features/layer-viewer/: KeyLabel.tsx  LayerSelector.tsx  LayerViewer.tsx  useLayerData.ts
apps/macro-eleven/src/features/overlay/: OverlayView.tsx
apps/macro-eleven/src/features/pot-monitor/: PotGauge.tsx  PotMonitor.tsx  usePotValue.ts
apps/macro-eleven/src/pages/: KeyTesterPage.tsx  LayerViewerPage.tsx  PotMonitorPage.tsx
apps/macro-eleven/src/shared/lib/: keycode-labels.ts  tauri.ts  useKeyEvents.ts  useLayerData.ts  usePotValue.ts
apps/macro-eleven/src/shared/ui/: KnobDial.css  NavBar.tsx  (+6 more)
domains/macropads/four-pad/: README.md
domains/macropads/macro-eleven/: README.md
domains/macropads/macro-eleven/docs/: macro-eleven.md
sdks/: README.md
shared/libs/LiquidCrystal_I2C/: library.properties
(+19 files in other folders)
