[package]
name = "macro-eleven"
version = "0.1.0"
description = "Macro Eleven Companion App"
authors = ["Miles Roxas"]
edition = "2021"

[lib]
name = "macro_eleven_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2"
regex = "1"
